--- a/style.scss
+++ b/style.scss
@@ -261,7 +261,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -410,7 +410,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -495,8 +495,8 @@ header {
 }
 @media screen and (max-width: 725px) {
   .services .wrapper .first,
-  .services .wrapper .second  {
-    margin-left:  15%;
+  .services .wrapper .second {
+    margin-left: 15%;
   }
 }
 
@@ -538,7 +538,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -612,7 +612,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -632,7 +632,7 @@ header {
 
     .creativity {
       font-size: 0;
-      height: 450px;
+      // height: 450px;
 
       .left {
         background-image: url("./images/photography.jpg");
@@ -649,6 +649,7 @@ header {
         display: inline-block;
         width: 45%;
         height: auto;
+        font-family: $font-montserrat;
         position: relative;
 
         div {
@@ -696,7 +697,7 @@ header {
             overflow: auto;
           }
         }
-     
+
         ::-webkit-scrollbar {
           width: 0.6vw;
         }
@@ -723,10 +724,10 @@ header {
 }
 
 @media screen and (max-width: 670px) {
-  section.weDo{
+  section.weDo {
     padding-top: 0;
     margin-bottom: 0;
-  } 
+  }
   .weDo .wrapper h2 {
     padding-bottom: 25px;
   }
@@ -734,7 +735,6 @@ header {
     margin-top: 0;
     margin-bottom: 4vh;
   }
-  
 }
 
 .slides {
@@ -784,7 +784,7 @@ header {
           left: 3.125vw;
           right: 0;
           bottom: 15px;
-          width: 60px;
+          width: 3.125vw;
           height: 3px;
           background-color: #f38181;
         }
@@ -811,7 +811,7 @@ header {
   }
 }
 
-@media screen and (max-width: 1320px ) {
+@media screen and (max-width: 1320px) {
   .slides .wrapper .second {
     padding: 24px;
   }
@@ -820,7 +820,7 @@ header {
     width: 50%;
   }
   .slides .wrapper .third h5::after {
-      width: 30px;
+    width: 30px;
   }
   .slides .wrapper .third p {
     margin-left: 0;
@@ -832,14 +832,18 @@ header {
     border: none;
     padding: 4px;
   }
-
 }
 
 @media screen and (max-width: 840px) {
   .slides .wrapper .third {
     width: 54%;
   }
+
+  .slides .wrapper .third h5 {
+    padding-left: 9vw;
+  }
 }
+
 .ourTeam {
   margin-top: 12vh;
 
@@ -864,7 +868,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -895,19 +899,19 @@ header {
       text-align: center;
 
       h3 {
-        margin: 30px 0 15px 0;
+        margin: 7% 0 1% 0;
         font-family: $font-montserrat;
-        font-size: 14px;
+        font-size: 0.729vw;
         color: #333333;
         letter-spacing: 1px;
       }
 
       p {
         font-family: $font-roboto;
-        font-size: 15px;
+        font-size: 0.78vw;
         font-weight: lighter;
         font-style: italic;
-        width: 150px;
+        width: 7.8vw;
       }
 
       .member {
@@ -927,27 +931,108 @@ header {
           right: 10px;
         }
 
-        div {
+        .what {
           background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%);
           min-width: 100%;
           min-height: 100%;
-          display: none;
+          // display: none;
           position: absolute;
           left: 50%;
           top: 50%;
           transform: translate(-50%, -50%);
-          img {
-            padding-top: 50%;
+
+          .container {
+            margin-top: 55%;
+            margin-left: 20%;
+            width: 228px;
+            height: 57px;
+
+            button {
+              width: 57px;
+              height: 57px;
+              background-color: #fce38a;
+              border: 1px solid #f38181;
+              border-top: none;
+              border-left: none;
+              border-bottom: none;
+              vertical-align: top;
+              position: relative;
+
+              &:last-child {
+                border-right: none;
+              }
+
+              .top-img {
+                display: none;
+                width: 57px;
+                height: 57px;
+              }
+              &:hover .top-img{
+                position: absolute;
+                top: 0;
+                left: 0;
+                display: block;
+                width: 57px;
+                height: 57px;
+                background-color: #f38181;
+
+                img {
+                  display: none;
+                }
+                // background-image: url("./images/instagram-white.png");
+                // .hover-on-hover {
+                //   position: absolute;
+                //   left: 50%;
+                //   top: 50%;
+                //   transform: translate(-50%, -50%);
+        
+                //   .red-button {
+                //     display: inline-block;
+                //     display: none;
+                //     // width: 228px;
+                //     height: 57px;
+                //     width: 57px;
+                //     z-index: 50;
+                    
+                //     width: 57px;
+                //     height: 57px;
+                //     background-color: #f38181;
+                //     border: none;
+                //     vertical-align: top;
+                //   }
+                // }
+                // &:hover .hover-on-hover {
+                //   display: block;
+                // }
+
+              }
+            }
+          
           }
         }
-        &:hover div {
+        &:hover .what {
           display: block;
         }
+    
       }
     }
     .right {
       margin-right: 0;
     }
+  }
+}
+
+@media screen and (max-width: 1010px) {
+  .ourTeam {
+    margin-top: 8vh;
+  }
+  .ourTeam .wrapper h2 {
+    padding-bottom: 25px;
+  }
+
+  .ourTeam .wrapper p {
+    margin-bottom: 4vh;
+    margin-top: 2vh;
   }
 }
 
@@ -981,6 +1066,10 @@ header {
     width: 110px;
     height: 120px;
   }
+
+  .logos {
+    margin-bottom: 7vh;
+  }
 }
 
 @media screen and (max-width: 1123px) {
@@ -996,6 +1085,12 @@ header {
 @media screen and (max-width: 716px) {
   .logos .wrapper .logo-images {
     transform: translate(-3%, 5%);
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .logos {
+    margin-bottom: 4vh;
   }
 }
 
@@ -1024,7 +1119,7 @@ header {
         right: 0;
         margin: auto;
         bottom: 15px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -1044,10 +1139,32 @@ header {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .ourWorks .wrapper h2 {
+    padding-bottom: 25px;
+  }
+
+  .ourWorks .wrapper p {
+    margin-bottom: 5vh;
+    margin-top: 2vh;
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .ourWorks .wrapper h2 {
+    padding-bottom: 20px;
+  }
+
+  .ourWorks .wrapper p {
+    margin-bottom: 3vh;
+    margin-top: 1.5vh;
+  }
+}
+
 .wallpaper {
   width: 100%;
   font-size: 0;
-  margin-bottom: 90px;
+  margin-bottom: 10vh;
 
   .first,
   .second {
@@ -1137,6 +1254,12 @@ header {
   }
 }
 
+@media screen and (max-width: 1290px) {
+  .wallpaper {
+    margin-bottom: 5vh;
+  }
+}
+
 .slides2 {
   margin-bottom: 10.67vh;
 
@@ -1184,7 +1307,7 @@ header {
           left: 0;
           right: 0;
           bottom: 15px;
-          width: 60px;
+          width: 3.125vw;
           height: 3px;
           background-color: #f38181;
         }
@@ -1195,6 +1318,47 @@ header {
       width: auto;
       transform: rotate(270deg);
     }
+  }
+}
+
+@media screen and (max-width: 1320px) {
+  .slides2 .wrapper .second {
+    padding: 24px;
+  }
+
+  .slides2 .wrapper .third {
+    width: 50%;
+  }
+  .slides2 .wrapper .third h5::after {
+    width: 30px;
+  }
+  .slides2 .wrapper .third p {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 1290px) {
+  .slides2 {
+    margin-bottom: 5vh;
+    padding: 0;
+  }
+}
+@media screen and (max-width: 990px) {
+  .slides2 .wrapper .second img {
+    // padding: 2px;
+    width: 140px;
+    height: 100px;
+  }
+
+  .slides2 .wrapper div {
+    line-height: 20px;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .slides2 .wrapper .third {
+    width: 54%;
+    line-height: 20px;
   }
 }
 
@@ -1228,7 +1392,7 @@ header {
         right: 0;
         bottom: 15px;
         margin: 0 auto;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -1272,12 +1436,12 @@ header {
       h3 {
         font-family: $font-montserrat;
         color: #333333;
-        font-size: 14px;
+        font-size: 0.729vw;
         margin-bottom: 1.5vh;
       }
 
       .sloping {
-        font-size: 15px;
+        font-size: 0.78vw;
         color: #333333;
         font-family: $font-roboto;
         font-style: italic;
@@ -1291,7 +1455,7 @@ header {
           left: 0;
           right: 0;
           bottom: 0;
-          width: 60px;
+          width: 3.125vw;
           height: 3px;
           background-color: #f38181;
         }
@@ -1304,6 +1468,39 @@ header {
         line-height: 1.5rem;
       }
     }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .clients .wrapper h5 {
+    padding-top: 6vh;
+  }
+  .clients .wrapper h2 {
+    padding-bottom: 25px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .clients .wrapper .top-row .first {
+    display: block;
+    margin: auto;
+    margin-bottom: 3%;
+  }
+  .clients .wrapper .top-row .second {
+    display: block;
+    margin: auto;
+    margin-bottom: 2%;
+  }
+
+  .clients .wrapper .bottom-row .first {
+    display: block;
+    margin: auto;
+    margin-bottom: 2%;
+  }
+
+  .clients .wrapper .bottom-row .second {
+    display: block;
+    margin: auto;
+    margin-bottom: 2%;
   }
 }
 
@@ -1321,7 +1518,7 @@ header {
       font-weight: bold;
       position: relative;
       line-height: 1.6;
-      padding-bottom: 2.6vw;
+      padding-bottom: 50px;
 
       &::after {
         content: "";
@@ -1330,7 +1527,7 @@ header {
         right: 0;
         bottom: 15px;
         margin: 0 auto;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
@@ -1360,7 +1557,7 @@ header {
         }
 
         h3 {
-          font-size: 14px;
+          font-size: 0.729vw;
           font-family: $font-montserrat;
           color: #333333;
           text-align: left;
@@ -1368,7 +1565,7 @@ header {
         }
 
         p {
-          font-size: 15px;
+          font-size: 0.78vw;
           line-height: 1.5;
           font-family: $font-roboto;
           color: #999999;
@@ -1381,18 +1578,18 @@ header {
           text-align: center;
           top: 41%;
           left: -2%;
-          width: 3.125vw;
-          height: 3.64vw;
+          width: 61px;
+          height: 65px;
           background: #95e1d3;
 
           h4 {
             color: #ffffff;
-            font-size: 14px;
+            font-size: 0.729vw;
 
             span {
               display: block;
               padding-top: 10px;
-              font-size: 28px;
+              font-size: 1.45vw;
               font-weight: bold;
             }
           }
@@ -1421,6 +1618,45 @@ header {
     }
   }
 }
+@media screen and (max-width: 1400px) {
+  .blog .wrapper article a .sticky-note {
+    top: 34%;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .blog .wrapper h2 {
+    padding-bottom: 25px;
+  }
+}
+@media screen and (max-width: 1120px) {
+  .blog .wrapper article a .sticky-note {
+    top: 26%;
+    width: 50px;
+    height: 54px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .blog .wrapper article a .sticky-note {
+    top: 20%;
+    width: 45px;
+    height: 49px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .blog .wrapper article {
+    display: block;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .blog .wrapper article a .sticky-note {
+    top: 10%;
+    width: 30px;
+    height: 34px;
+    margin: 5px 0 10px 0;
+  }
+}
 
 .map {
   position: relative;
@@ -1447,7 +1683,7 @@ header {
 
     p {
       font-family: $font-montserrat;
-      font-size: 24px;
+      font-size: 1.25vw;
       font-weight: bold;
       position: relative;
       padding-bottom: 19px;
@@ -1460,11 +1696,17 @@ header {
         bottom: 0;
         margin: 0 auto;
         height: 4px;
-        width: 60px;
+        width: 3.125vw;
         height: 3px;
         background-color: #f38181;
       }
     }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .map {
+    height: 20vh;
   }
 }
 
@@ -1522,7 +1764,7 @@ footer {
       h4 {
         display: inline-block;
         font-family: $font-roboto;
-        font-size: 15px;
+        font-size: 0.78vw;
         font-style: italic;
         font-weight: lighter;
         color: #999999;
@@ -1544,7 +1786,7 @@ footer {
           border: 1px solid #ebebeb;
           width: 47%;
           color: #cccccc;
-          font-size: 15px;
+          font-size: 0.78vw;
           font-family: $font-roboto;
           font-style: italic;
           font-weight: lighter;
@@ -1555,7 +1797,7 @@ footer {
           border: 1px solid #95e1d3;
           width: 30%;
           color: #ffffff;
-          font-size: 14px;
+          font-size: 0.729vw;
           font-weight: bold;
           font-family: $font-montserrat;
           padding: 0.83vw;
@@ -1578,14 +1820,14 @@ footer {
           h3 {
             color: #333333;
             font-family: $font-montserrat;
-            font-size: 13px;
+            font-size: 0.677vw;
             text-transform: uppercase;
             line-height: 1.4;
           }
 
           p {
             color: #999999;
-            font-size: 13px;
+            font-size: 0.677vw;
           }
 
           img {
@@ -1612,7 +1854,7 @@ footer {
 
       .vieta {
         position: absolute;
-        left: 0px;
+        left: 0;
         top: 0;
         transform: translateX(15%);
       }
@@ -1625,20 +1867,12 @@ footer {
       }
 
       h4 {
-        font-size: 13px;
+        font-size: 0.677vw;
         font-family: $font-roboto;
         font-style: italic;
         color: #333333;
         margin-top: 10%;
       }
-
-      // .picture {
-      //   position: absolute;
-      // }
-
-      // img {
-      //   max-width: 4.68vw;
-      // }
     }
 
     .bottom p {
@@ -1653,5 +1887,53 @@ footer {
         color: #f38787;
       }
     }
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  footer .wrapper .center {
+    margin-left: 0;
+  }
+  footer .wrapper .left {
+    margin-right: 0;
+  }
+  footer .wrapper .right {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  footer .wrapper .left {
+    display: block;
+    margin: auto;
+    width: 70%;
+    text-align: center;
+    margin-bottom: 3%;
+  }
+
+  footer .wrapper .center {
+    display: block;
+    margin: auto;
+    width: 70%;
+    text-align: center;
+    margin-bottom: 3%;
+  }
+
+  footer .wrapper .right {
+    display: block;
+    margin: auto;
+    text-align: center;
+    position: unset;
+    width: 70%;
+    margin-bottom: 3%;
+  }
+
+  footer .wrapper .right .vieta {
+    position: unset;
+    transform: translateX(0%);
+  }
+
+  footer .wrapper .right .vieta h4 {
+    margin-top: 3%;
   }
 }
