--- a/style.scss
+++ b/style.scss
@@ -288,6 +288,13 @@ header {
   }
 }
 
+
+@media screen and (max-width: 1200px) {
+  .about .wrapper p{
+   font-size: 1.2vw;
+  }
+}
+
 @media screen and (max-width: 780px) {
   .about {
     margin-top: 6vh;
@@ -300,6 +307,7 @@ header {
       p {
         margin-top: 1.5vh;
         margin-bottom: 3vh;
+        font-size: 1.2vw;
       }
     }
   }
@@ -466,6 +474,7 @@ header {
   }
   .services .wrapper div p {
     width: 20vh;
+    font-size: 1.2vw;
   }
   .services .wrapper div .small-icon {
     margin-right: 1.5vw;
@@ -473,6 +482,9 @@ header {
   }
   .horizontal-line {
     width: 70%;
+  }
+  .services .wrapper div h3 {
+    font-size: 1.2vw;
   }
 }
 
@@ -491,6 +503,7 @@ header {
 
   .services .wrapper div p {
     width: 15vh;
+    
   }
 }
 @media screen and (max-width: 725px) {
@@ -555,6 +568,17 @@ header {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .design .wrapper div img {
+    margin-top: 2.7%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .design .wrapper div img {
+    margin-top: 5.1%;
+  }
+}
 @media screen and (max-width: 750px) {
   .design {
     height: 64vh;
@@ -723,6 +747,39 @@ header {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .weDo .wrapper p {
+    font-size: 1.2vw;
+  }
+
+  .weDo .wrapper .creativity .right div h3 {
+    font-size: 1.2vw;
+  }
+
+  .weDo .wrapper .creativity .right div:nth-child(2)  p {
+    font-size: 1.2vw;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  
+  .weDo .wrapper .creativity .left {
+    display: block;
+    margin: auto;
+    width: 100%;
+  }
+  .weDo .wrapper .creativity .right {
+    display: block;
+    margin: auto;
+    width: 100%;
+    margin-top: 5%;
+  }
+
+  .weDo .wrapper .creativity .right div:nth-child(2) p {
+    font-size: 1.4vw;
+    width: 64vw;
+}
+}
 @media screen and (max-width: 670px) {
   section.weDo {
     padding-top: 0;
@@ -935,7 +992,7 @@ header {
           background-image: linear-gradient(0deg, #f0e290da 0%, #e98b89da 100%);
           min-width: 100%;
           min-height: 100%;
-          // display: none;
+          display: none;
           position: absolute;
           left: 50%;
           top: 50%;
@@ -962,52 +1019,28 @@ header {
                 border-right: none;
               }
 
-              .top-img {
+              .top-div {
                 display: none;
+              }
+              &:hover .top-div{
+                position: absolute;
+                display: inline-block;
+                background-color: #f38181;
                 width: 57px;
                 height: 57px;
-              }
-              &:hover .top-img{
-                position: absolute;
                 top: 0;
                 left: 0;
-                display: block;
-                width: 57px;
-                height: 57px;
-                background-color: #f38181;
 
-                img {
-                  display: none;
+
+                .top-img {
+                  display: block;
+                  margin: auto;
+                  margin-top: 25%;
+                  
                 }
-                // background-image: url("./images/instagram-white.png");
-                // .hover-on-hover {
-                //   position: absolute;
-                //   left: 50%;
-                //   top: 50%;
-                //   transform: translate(-50%, -50%);
-        
-                //   .red-button {
-                //     display: inline-block;
-                //     display: none;
-                //     // width: 228px;
-                //     height: 57px;
-                //     width: 57px;
-                //     z-index: 50;
-                    
-                //     width: 57px;
-                //     height: 57px;
-                //     background-color: #f38181;
-                //     border: none;
-                //     vertical-align: top;
-                //   }
-                // }
-                // &:hover .hover-on-hover {
-                //   display: block;
-                // }
 
               }
             }
-          
           }
         }
         &:hover .what {
@@ -1022,6 +1055,82 @@ header {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .ourTeam .wrapper p {
+    font-size: 1.2vw;
+  }
+
+  .ourTeam .wrapper .center h3 {
+    font-size: 1vw;
+  }
+  
+  .ourTeam .wrapper .left h3 {
+    font-size: 1vw;
+  }
+  
+  .ourTeam .wrapper .right h3 {
+    font-size: 1vw;
+  }
+
+  .ourTeam .wrapper .left p{
+    font-size: 0.9vw;
+  }
+  .ourTeam .wrapper .center p{
+    font-size: 0.9vw;
+  }
+  .ourTeam .wrapper .right p{
+    font-size: 0.9vw;
+  }
+
+  .ourTeam .wrapper .left .member  .what .container {
+    margin-top: 55%;
+    margin-left: 15%;
+    width: 200px;
+    height: 57px;
+  }
+  .ourTeam .wrapper .left .member  .what .container button {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ourTeam .wrapper .left .member  .what .container button:hover .top-div {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container {
+    margin-top: 55%;
+    margin-left: 15%;
+    width: 200px;
+    height: 57px;
+  }
+  .ourTeam .wrapper .center .member  .what .container button {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container button:hover .top-div {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container {
+    margin-top: 55%;
+    margin-left: 15%;
+    width: 200px;
+    height: 57px;
+  }
+  .ourTeam .wrapper .right .member  .what .container button {
+    width: 50px;
+    height: 50px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container button:hover .top-div {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 @media screen and (max-width: 1010px) {
   .ourTeam {
     margin-top: 8vh;
@@ -1033,6 +1142,57 @@ header {
   .ourTeam .wrapper p {
     margin-bottom: 4vh;
     margin-top: 2vh;
+    font-size: 1.2vw;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .ourTeam .wrapper .left .member  .what .container {
+    margin-top: 55%;
+    margin-left: 10%;
+    width: 190px;
+    height: 50px;
+  }
+  .ourTeam .wrapper .left .member  .what .container button {
+    width: 45px;
+    height: 45px;
+  }
+
+  .ourTeam .wrapper .left .member  .what .container button:hover .top-div {
+    width: 45px;
+    height: 45px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container {
+    margin-top: 55%;
+    margin-left: 10%;
+    width: 190px;
+    height: 50px;
+  }
+  .ourTeam .wrapper .center .member  .what .container button {
+    width: 45px;
+    height: 45px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container button:hover .top-div {
+    width: 45px;
+    height: 45px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container {
+    margin-top: 55%;
+    margin-left: 10%;
+    width: 190px;
+    height: 50px;
+  }
+  .ourTeam .wrapper .right .member  .what .container button {
+    width: 45px;
+    height: 45px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container button:hover .top-div {
+    width: 45px;
+    height: 45px;
   }
 }
 
@@ -1147,6 +1307,7 @@ header {
   .ourWorks .wrapper p {
     margin-bottom: 5vh;
     margin-top: 2vh;
+    font-size: 1.2vw;
   }
 }
 
@@ -1170,6 +1331,7 @@ header {
   .second {
     display: inline-block;
     width: 50%;
+    overflow: hidden;
 
     .left,
     .left-big,
@@ -1187,6 +1349,7 @@ header {
       cursor: pointer;
       position: relative;
       box-sizing: border-box;
+      // overflow: clip;
 
       &:hover .overlay {
         display: block;
@@ -1199,11 +1362,14 @@ header {
     }
 
     .left-big {
-      // height: 80%;
-      width: 50%;
-      box-sizing: border-box;
       cursor: pointer;
       position: relative;
+        img {
+          max-width: 100%;
+          max-height: 100%;
+          margin: auto;
+          font-size: 0;
+        }
 
       &:hover .overlay {
         display: block;
@@ -1239,7 +1405,6 @@ header {
           font-size: 14px;
           font-family: $font-montserrat;
           color: #ffffff;
-          // margin-top: 10vh;
         }
 
         h2 {
@@ -1471,6 +1636,28 @@ header {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .clients .wrapper .top-row h3 {
+    font-size: 1vw;
+  }
+  .clients .wrapper .top-row .sloping {
+    font-size: 1vw;
+  }
+  .clients .wrapper .top-row p {
+    font-size: 1vw;
+  }
+
+  .clients .wrapper .bottom-row h3 {
+    font-size: 1vw;
+  }
+  .clients .wrapper .bottom-row .sloping {
+    font-size: 1vw;
+  }
+  .clients .wrapper .bottom-row p {
+    font-size: 1vw;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .clients .wrapper h5 {
     padding-top: 6vh;
@@ -1484,23 +1671,46 @@ header {
     display: block;
     margin: auto;
     margin-bottom: 3%;
+    width: 100%;
   }
   .clients .wrapper .top-row .second {
     display: block;
     margin: auto;
-    margin-bottom: 2%;
+    width: 100%;
   }
 
   .clients .wrapper .bottom-row .first {
     display: block;
     margin: auto;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
+    width: 100%;
   }
 
   .clients .wrapper .bottom-row .second {
     display: block;
     margin: auto;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
+    width: 100%;
+  }
+
+  .clients .wrapper .top-row h3 {
+    font-size: 2vw;
+  }
+  .clients .wrapper .top-row .sloping {
+    font-size: 2vw;
+  }
+  .clients .wrapper .top-row p {
+    font-size: 2vw;
+  }
+
+  .clients .wrapper .bottom-row h3 {
+    font-size: 2vw;
+  }
+  .clients .wrapper .bottom-row .sloping {
+    font-size: 2vw;
+  }
+  .clients .wrapper .bottom-row p {
+    font-size: 2vw;
   }
 }
 
@@ -1618,6 +1828,7 @@ header {
     }
   }
 }
+
 @media screen and (max-width: 1400px) {
   .blog .wrapper article a .sticky-note {
     top: 34%;
@@ -1627,6 +1838,18 @@ header {
   .blog .wrapper h2 {
     padding-bottom: 25px;
   }
+
+  .blog .wrapper article a h3 {
+    font-size: 1vw;
+  }
+  .blog .wrapper article a p {
+    font-size: 1vw;
+  }
+
+  .blog .wrapper article a .sticky-note {
+    width: 50px;
+    height: 50px;
+}
 }
 @media screen and (max-width: 1120px) {
   .blog .wrapper article a .sticky-note {
@@ -1935,5 +2158,45 @@ footer {
 
   footer .wrapper .right .vieta h4 {
     margin-top: 3%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  footer .wrapper .left p {
+    font-size: 1.2vw;
+  }
+  footer .wrapper .left h3 {
+    font-size: 1.4vw;
+  }
+
+  footer .wrapper .left h3 span{
+    font-size: 1vw;
+  }
+
+  footer .wrapper .left h4 {
+    font-size: 1.1vw;
+  }
+
+  footer .wrapper .left form input {
+    font-size: 1vw;
+  }
+  footer .wrapper .left form button {
+    font-size: 1vw;
+  }
+  footer .wrapper .center h2 {
+    font-size: 1vw;
+  }
+  footer .wrapper .center a > div h3 {
+    font-size: 1vw;
+  }
+  footer .wrapper .center a > div p {
+    font-size: 1vw;
+  }
+
+  footer .wrapper .right h3 {
+    font-size: 1vw;
+  }
+  footer .wrapper .right h4 {
+    font-size: 1vw;
   }
 }
