--- a/style.scss
+++ b/style.scss
@@ -286,8 +286,11 @@ header {
     margin-top: 8vh;
     margin-bottom: 8vh;
   }
-}
 
+  .about .wrapper a .super-team img {
+  margin-top: 5vh;
+}
+}
 
 @media screen and (max-width: 1200px) {
   .about .wrapper p{
@@ -295,6 +298,11 @@ header {
   }
 }
 
+@media screen and (max-width: 800px) {
+  .about .wrapper a .super-team img {
+    margin-top: 3vh;
+}
+}
 @media screen and (max-width: 780px) {
   .about {
     margin-top: 6vh;
@@ -1195,6 +1203,107 @@ header {
     height: 45px;
   }
 }
+
+@media screen and (max-width: 860px) {
+  .ourTeam .wrapper .left .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 160px;
+    height: 40px;
+  }
+  .ourTeam .wrapper .left .member  .what .container button {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ourTeam .wrapper .left .member  .what .container button:hover .top-div {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 160px;
+    height: 40px;
+  }
+  .ourTeam .wrapper .center .member  .what .container button {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container button:hover .top-div {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 160px;
+    height: 40px;
+  }
+  .ourTeam .wrapper .right .member  .what .container button {
+    width: 40px;
+    height: 40px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container button:hover .top-div {
+    width: 40px;
+    height: 40px;
+  }
+}
+@media screen and (max-width: 760px) {
+  .ourTeam .wrapper .left .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 130px;
+    height: 35px;
+  }
+  .ourTeam .wrapper .left .member  .what .container button {
+    width: 35px;
+    height: 35px;
+  }
+
+  .ourTeam .wrapper .left .member  .what .container button:hover .top-div {
+    width: 35px;
+    height: 35px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 130px;
+    height: 35px;
+  }
+  .ourTeam .wrapper .center .member  .what .container button {
+    width: 35px;
+    height: 35px;
+  }
+
+  .ourTeam .wrapper .center .member  .what .container button:hover .top-div {
+    width: 35px;
+    height: 35px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container {
+    margin-top: 60%;
+    margin-left: 10%;
+    width: 130px;
+    height: 35px;
+  }
+  .ourTeam .wrapper .right .member  .what .container button {
+    width: 35px;
+    height: 35px;
+  }
+
+  .ourTeam .wrapper .right .member  .what .container button:hover .top-div {
+    width: 35px;
+    height: 35px;
+  }
+}
+
+
 
 .logos {
   height: 25.9vh;
